[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Mattias Sjödin <mattias.sjodin.6764@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/MattiasMTS/advent2022"

[tool.poetry.dependencies]
python = ">=3.8, <4"
pandas = "^1.5.2"
pytest = ">=2.6.4"
cffi = ">=0.0.1"
support = {path = "support", develop = true}


[tool.poetry.group.dev.dependencies]
pre-commit = {extras = ["toml"], version = "^2.20.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
